implements login, check Existing Device
